fix error with avatar uploader not showing current image revert discord tag form component back to it's previous version; the custom component was proving more trouble than it was worth - especially for a used in 1 place item update user save route to accept the new social infos

--- a/client/src/app/player/profile-edit/profile-edit.component.css
+++ b/client/src/app/player/profile-edit/profile-edit.component.css
@@ -1,9 +1,4 @@
-.example-container {
-    display: flex;
-    flex-direction: column;
-}
-
-.example-container>* {
+.full-width {
     width: 100%;
 }
 
